--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "gsap": "^3.13.0",
+    "motion": "^12.23.24",
     "next": "14.2.23",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "three": "^0.168.0"
   },
   "devDependencies": {
